--- a/BetBoss.Statistics.WebApi/appsettings.Development.json
+++ b/BetBoss.Statistics.WebApi/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ApiFootBallConfiguration": {
+    "FooteballApiUrlBase": "https://api-football-v1.p.rapidapi.com",
+    "RapidApiKey": "c962880776msh8bdf830ff0f9578p11b3fbjsnd73619def3fe",
+    "HostRapidApi": "api-football-v1.p.rapidapi.com"
+  },
+  "DataBaseAdapterConfiguration": {
+    "SqlConnectionString": "Server=localhost;Database=;User Id=;Password=;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
