--- a/BetBoss.Statistics.WebApi/.gitignore
+++ b/BetBoss.Statistics.WebApi/.gitignore
@@ -452,3 +452,6 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Add appsettings.json to gitignore
+appsettings.json
